Add HTML fragments.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,9 +2,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head>
     <meta charset="UTF-8"/>
-    <title></title>
+    <title>Coding Events</title>
 </head>
     <body>
-        Insert body content here.
+        <h1>Coding Events</h1>
+
+        <nav th:replace="fragments :: navigation"></nav>
     </body>
 </html>
