--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -5,8 +5,13 @@
         <nav th:replace="fragments :: navigation"></nav>
         <form method="post" action="/events/create">
             <div class ="form-group">
-                <label>Name
+                <label>Event Name:
                     <input type="text" name="eventName" class="form-control">
+                </label>
+            </div>
+            <div class ="form-group">
+                <label>Event Description:
+                    <input type="text" name="eventDesc" class="form-control">
                 </label>
             </div>
             <div class ="form-group">
