--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -10,9 +10,13 @@
                 <tr>
                     <th>Name</th>
                 </tr>
+                <tr>
+                    <th>Description</th>
+                </tr>
             </thead>
-            <tr th:each="event : ${events}">
-                <td th:text="${event}"></td>
+            <tr th:each="event: ${events}">
+                <td th:text="${event.getKey()}"></td>
+                <td th:text="${event.getValue()}"></td>
             </tr>
         </table>
     </body>
