--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -5,19 +5,31 @@
         <h1>All Events</h1>
         <nav th:replace="fragments :: navigation"></nav>
         <p th:unless="${events} and ${events.size()}">No events!</p>
+<!--        <table class="table table-striped">-->
+<!--            <thead>-->
+<!--                <tr>-->
+<!--                    <th>Name</th>-->
+<!--                    <th>Description</th>-->
+<!--                </tr>-->
+<!--            </thead>-->
+<!--            <tr th:each="event: ${events}">-->
+<!--                <td th:text="${event.getKey()}"></td>-->
+<!--                <td th:text="${event.getValue()}"></td>-->
+<!--            </tr>-->
+<!--        </table>-->
         <table class="table table-striped">
             <thead>
                 <tr>
-                    <th>Name</th>
-                </tr>
-                <tr>
-                    <th>Description</th>
+                    <th>Event Name</th>
+                    <th>Event Description</th>
                 </tr>
             </thead>
-            <tr th:each="event: ${events}">
-                <td th:text="${event.getKey()}"></td>
-                <td th:text="${event.getValue()}"></td>
-            </tr>
+            <th:block th:each="event : ${events}">
+                <tr>
+                    <td th:text="${event.getKey()}"></td>
+                    <td th:text="${event.getValue()}"></td>
+                </tr>
+            </th:block>
         </table>
     </body>
 </html>
