--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -17,5 +17,11 @@
             <li class="nav-item"><a class="nav-link" href="/events/create">Create Event</a></li>
         </ul>
     </nav>
+<table>
+    <tr>
+        <td th:fragment="address">1234 5th Street</td>
+    </tr>
+</table>
+
 </body>
 </html>
