--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -27,8 +27,8 @@
             </thead>
             <th:block th:each="event : ${events}">
                 <tr>
-                    <td th:text="${event.getKey()}"></td>
-                    <td th:text="${event.getValue()}"></td>
+                    <td th:text="${event.name}"></td>
+                    <td th:text="${event.toString()}"></td>
                     <td th:replace="fragments :: address"></td>
                 </tr>
             </th:block>
