--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -20,6 +20,7 @@
         <table class="table table-striped">
             <thead>
                 <tr>
+                    <th>ID</th>
                     <th>Event Name</th>
                     <th>Event Description</th>
                     <th>Event Address</th>
@@ -27,6 +28,7 @@
             </thead>
             <th:block th:each="event : ${events}">
                 <tr>
+                    <td th:text="${event.id}"></td>
                     <td th:text="${event.name}"></td>
                     <td th:text="${event.getDesc()}"></td>
                     <td th:replace="fragments :: address"></td>
