--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -6,12 +6,12 @@
         <form method="post" action="/events/create">
             <div class ="form-group">
                 <label>Event Name:
-                    <input type="text" name="eventName" class="form-control">
+                    <input type="text" name="name" class="form-control">
                 </label>
             </div>
             <div class ="form-group">
                 <label>Event Description:
-                    <input type="text" name="eventDesc" class="form-control">
+                    <input type="text" name="desc" class="form-control">
                 </label>
             </div>
             <div class ="form-group">
