--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -30,8 +30,11 @@
                 <tr>
                     <td th:text="${event.id}"></td>
                     <td th:text="${event.name}"></td>
-                    <td th:text="${event.getDesc()}"></td>
+                    <td th:text="${event.desc}"></td>
                     <td th:replace="fragments :: address"></td>
+                    <td>
+                        <a th:href="@{/events/edit/{id}(id=${event.id})}">Edit</a>
+                    </td>
                 </tr>
             </th:block>
         </table>
