--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -10,8 +10,13 @@
                 </label>
             </div>
             <div class ="form-group">
-                <label>Event Description:
+                <label>Event Description
                     <input type="text" name="desc" class="form-control">
+                </label>
+            </div>
+            <div class ="form-group">
+                <label>Contact Email
+                    <input type="text" name="contactEmail" class="form-control">
                 </label>
             </div>
             <div class ="form-group">
