--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -3,22 +3,25 @@
 <head th:replace="fragments :: head"></head>
     <body class="container">
         <nav th:replace="fragments :: navigation"></nav>
-        <p th:text="${errorMsg}" style="color:red;"></p>
+<!--        <p th:text="${errorMsg}" style="color:red;"></p>-->
         <form method="post" action="/events/create">
             <div class ="form-group">
                 <label>Event Name:
-                    <input type="text" name="name" class="form-control">
+                    <input th:field="${event.name}" class="form-control">
                 </label>
+                <p class="error" th:errors="${event.name}"></p>
             </div>
             <div class ="form-group">
                 <label>Event Description
-                    <input type="text" name="desc" class="form-control">
+                    <input th:field="${event.desc}" class="form-control">
                 </label>
+                <p class="error" th:errors="${event.desc}"></p>
             </div>
             <div class ="form-group">
                 <label>Contact Email
-                    <input type="text" name="contactEmail" class="form-control">
+                    <input th:field="${event.contactEmail}" class="form-control">
                 </label>
+                <p class="error" th:errors="${event.contactEmail}"></p>
             </div>
             <div class ="form-group">
                 <input type="submit" value="Create Event" class="btn btn-success">
