--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -4,7 +4,7 @@
     <body class="container">
         <nav th:replace="fragments :: navigation"></nav>
 <!--        <p th:text="${errorMsg}" style="color:red;"></p>-->
-        <form method="post" action="/events/create">
+        <form method="POST">
             <div class ="form-group">
                 <label>Event Name:
                     <input th:field="${event.name}" class="form-control">
@@ -23,10 +23,19 @@
                 </label>
                 <p class="error" th:errors="${event.contactEmail}"></p>
             </div>
+            <div class="form-group">
+                <label>Type
+                    <select th:field="${event.type}">
+                        <option th:each="type : ${types}"
+                                th:value="${type}"
+                                th:text="${type.displayName}"
+                        ></option>
+                    </select>
+                </label>
+            </div>
             <div class ="form-group">
                 <input type="submit" value="Create Event" class="btn btn-success">
             </div>
-
         </form>
     </body>
 </html>
