--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -5,18 +5,6 @@
         <h1>All Events</h1>
         <nav th:replace="fragments :: navigation"></nav>
         <p th:unless="${events} and ${events.size()}">No events!</p>
-<!--        <table class="table table-striped">-->
-<!--            <thead>-->
-<!--                <tr>-->
-<!--                    <th>Name</th>-->
-<!--                    <th>Description</th>-->
-<!--                </tr>-->
-<!--            </thead>-->
-<!--            <tr th:each="event: ${events}">-->
-<!--                <td th:text="${event.getKey()}"></td>-->
-<!--                <td th:text="${event.getValue()}"></td>-->
-<!--            </tr>-->
-<!--        </table>-->
         <table class="table table-striped">
             <thead>
                 <tr>
@@ -25,6 +13,7 @@
                     <th>Event Description</th>
                     <th>Email Address</th>
                     <th>Event Address</th>
+                    <th>Event Type</th>
                 </tr>
             </thead>
             <th:block th:each="event : ${events}">
@@ -34,6 +23,7 @@
                     <td th:text="${event.desc}"></td>
                     <td th:text="${event.contactEmail}"></td>
                     <td th:replace="fragments :: address"></td>
+                    <td th:text="${event.type.displayName}"></td>
                     <td>
                         <a th:href="@{/events/edit/{id}(id=${event.id})}">Edit</a>
                     </td>
