Fix variable name consistency and update the edit controller method in the Entity.java class.

--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -13,9 +13,9 @@
             </div>
             <div class ="form-group">
                 <label>Event Description
-                    <input th:field="${event.desc}" class="form-control">
+                    <input th:field="${event.description}" class="form-control">
                 </label>
-                <p class="error" th:errors="${event.desc}"></p>
+                <p class="error" th:errors="${event.description}"></p>
             </div>
             <div class ="form-group">
                 <label>Contact Email
