--- a/src/main/resources/templates/events/edit.html
+++ b/src/main/resources/templates/events/edit.html
@@ -11,7 +11,12 @@
     </div>
     <div class ="form-group">
         <label>Event Description:
-            <input type="text" name="desc" class="form-control">
+            <input type="text" name="description" class="form-control">
+        </label>
+    </div>
+    <div class ="form-group">
+        <label>Contact Email:
+            <input type="text" name="contactEmail" class="form-control">
         </label>
     </div>
     <div class ="form-group">
