--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -20,10 +20,10 @@
                 <tr>
                     <td th:text="${event.id}"></td>
                     <td th:text="${event.name}"></td>
-                    <td th:text="${event.desc}"></td>
+                    <td th:text="${event.description}"></td>
                     <td th:text="${event.contactEmail}"></td>
                     <td th:replace="fragments :: address"></td>
-                    <td th:text="${event.type.displayName}"></td>
+                    <td th:text="${event.getType().getDisplayName()}"></td>
                     <td>
                         <a th:href="@{/events/edit/{id}(id=${event.id})}">Edit</a>
                     </td>
