--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -18,6 +18,12 @@
                 <p class="error" th:errors="${event.description}"></p>
             </div>
             <div class ="form-group">
+                <label>Event Location
+                    <input th:field="${event.location}" class="form-control">
+                </label>
+                <p class="error" th:errors="${event.location}"></p>
+            </div>
+            <div class ="form-group">
                 <label>Contact Email
                     <input th:field="${event.contactEmail}" class="form-control">
                 </label>
