--- a/src/main/resources/templates/events/edit.html
+++ b/src/main/resources/templates/events/edit.html
@@ -20,6 +20,11 @@
         </label>
     </div>
     <div class ="form-group">
+        <label>Event Location:
+            <input type="text" name="location" class="form-control">
+        </label>
+    </div>
+    <div class ="form-group">
         <input type="submit" value="Edit Event" class="btn btn-success">
         <input type="hidden" th:value="${event.id}" name="eventId" />
     </div>
