--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -13,21 +13,21 @@
             </div>
             <div class ="form-group">
                 <label>Event Description
-                    <input th:field="${event.description}" class="form-control">
+                    <input th:field="${event.eventDetails.description}" class="form-control">
                 </label>
-                <p class="error" th:errors="${event.description}"></p>
+                <p class="error" th:errors="${event.eventDetails.description}"></p>
             </div>
             <div class ="form-group">
                 <label>Event Location
-                    <input th:field="${event.location}" class="form-control">
+                    <input th:field="${event.eventDetails.location}" class="form-control">
                 </label>
-                <p class="error" th:errors="${event.location}"></p>
+                <p class="error" th:errors="${event.eventDetails.location}"></p>
             </div>
             <div class ="form-group">
                 <label>Contact Email
-                    <input th:field="${event.contactEmail}" class="form-control">
+                    <input th:field="${event.eventDetails.contactEmail}" class="form-control">
                 </label>
-                <p class="error" th:errors="${event.contactEmail}"></p>
+                <p class="error" th:errors="${event.eventDetails.contactEmail}"></p>
             </div>
             <div class="form-group">
                 <label>Event Category
