--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -21,9 +21,9 @@
                 <tr>
                     <td th:text="${event.id}"></td>
                     <td th:text="${event.name}"></td>
-                    <td th:text="${event.description}"></td>
-                    <td th:text="${event.contactEmail}"></td>
-                    <td th:text="${event.location}"></td>
+                    <td th:text="${event.eventDetails.description}"></td>
+                    <td th:text="${event.eventDetails.contactEmail}"></td>
+                    <td th:text="${event.eventDetails.location}"></td>
                     <td th:replace="fragments :: address"></td>
                     <td th:text="${event.eventCategory.name}"></td>
                     <td>
