--- a/src/main/resources/templates/tags/index.html
+++ b/src/main/resources/templates/tags/index.html
@@ -3,17 +3,18 @@
 <head th:replace="~{fragments :: head}"></head>
 <body class="container">
 
-<header th:replace="~{fragments :: navigation}"></header>
+<header th:replace="~{fragments :: header}"></header>
 
 <table class="table table-striped">
     <thead>
     <tr>
-        <th>Event Name</th>
+        <th>Tag Name</th>
     </tr>
     </thead>
-    <tr th:each="event : ${events}">
-        <td><a th:href="'/events/detail?eventId=' + ${event.id}" th:text="${event.name}"></a></td>
+    <tr th:each="tag : ${tags}">
+        <td th:text="${tag.displayName}"></td>
     </tr>
+
 </table>
 
 </body>
